Created CategoryItems Activity
Also created a DataService to handle all the data, added item click listeners to the CategoryAdapter and CategoryItemsAdapter, created stub for DetailActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="devslopes_logo">Devslopes Logo</string>
     <string name="back_to_the_app">Back to the App</string>
     <string name="credits">Artwork supplied by:\nVectors Market\nAnbileru Adaleru\nAndrejs Kirma</string>
+    <string name="category_title">%1$s Gear</string>
 </resources>
